css/style.css
@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@400;500;600&family=Baloo+Paaji+2:wght@400;500;600&family=Comfortaa:wght@400;500;600;700&family=Montserrat:wght@100;400;500&family=Quicksand:wght@300;400;500&family=Raleway:wght@300;400;500;600&display=swap');

html {
	height: 100%;
	font-family: 'Libre Franklin', sans-serif;
	-webkit-font-smoothing: antialiased;
	padding-top: 50px;
	margin: 0;
	padding: 0;
	scroll-behavior: smooth;
	--theme-color: #f47621;
	--bg1-color: #fff;
	--font-color: #111111;
	--bg2-color: #fff;
	--shadow-color: #191919;
	--footer-bg: #000;
	--footer-clr: #c4c4c4;
	--topBtn-bg: #f47621;
	--lgt-white: #f8f8f8;
	--heading-clr: #444;
	--eventcard: 5px 5px 15px rgba(0, 0, 0, 0.6);
	--box-clr: #fff;
	--wave1-bg: #636363;
	--wave2-bg: #b2b2b2;
	--bg-image: url('../assets/Images/logo/logo_for_boilerplate_1.png');
	--logo-image: url('../assets/Images/logo/Logo1.png');
	--box-shadow: 0 10px 25px rgba(240, 112, 0, 0.23), 0 6px 0px rgba(240, 112, 0, 0.5);
	--btn-shadow: 0 5px 10px #ff9a0e;
	--nav-bar: #fff;
	--nav-color: #f47621;
	--nav-clr: #000;
	--txt-shadow: 0px 3px 6px rgba(244, 118, 33, 0.3);
	--navbar-toggle: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
	--btn-text: #fff;
	--btn-hover: none;
}

html[data-theme='dark'] {
	--theme-color: rgb(245, 90, 43);
	--bg1-color: #121212;
	--font-color: #fff;
	--bg2-color: #272727;
	--shadow-color: #fff;
	--footer-bg: #000;
	--footer-clr: #fff;
	--topBtn-bg: #ff8723;
	--heading-clr: #fff;
	--eventcard: 0 2px 4px 0 #f47621;
	--box-clr: #202020;
	--wave1-bg: #686868;
	--wave2-bg: #b2b2b2;
	--bg-image: url('../assets/Images/logo/logo_for_boilerplate_2.png');
	--logo-image: url('../assets/Images/logo/Logo2.png');
	--box-shadow: 0 3px 14px rgba(0, 0, 0, 0.2);
	--btn-shadow: 0 3px 14px rgba(0, 0, 0, 0.2);
	--nav-bar: #000;
	--nav-color: #fff;
	--nav-clr: rgb(245, 90, 43);
	--txt-shadow: 0px 3px 6px rgba(255, 255, 255, 0.3);
	--navbar-toggle: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
	--btn-text: #000;
	--btn-hover: whitesmoke;
}

body {
	height: 100%;
	font-family: 'Libre Franklin', sans-serif;
	-webkit-font-smoothing: antialiased;
	padding-top: 50px;
	background-color: var(--bg1-color);
	margin: 0;
	padding: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0;
	color: var(--font-color);
	font-weight: 400;
	font-family: 'Libre Franklin', sans-serif;
}

h1 {
	font-size: 70px;
}

h2 {
	font-size: 36px;
}

h3 {
	font-size: 30px;
}

h4 {
	font-size: 24px;
}

h5 {
	font-size: 18px;
}

h6 {
	font-size: 16px;
}

p {
	font-size: 16px;
	font-family: 'Libre Franklin', sans-serif;
	font-weight: 400;
	line-height: 26px;
	margin: 0 0 15px 0;
}

img {
	max-width: 100%;
}

input:focus,
select:focus,
button:focus,
textarea:focus {
	outline: none;
}

a,
a:hover,
a:focus {
	text-decoration: none;
	outline: none;
	color: inherit;
}

ul,
ol {
	padding: 0;
	margin: 0;
}
#typeit {
	font-size: 8vw;
	font-weight: bold;
	color: rgb(247, 95, 39);
}
.dark-mode {
	color: var(--font-color);
}
.clr-wt {
	color: var(--bg1-color) !important;
}
.clr-theme {
	color: var(--theme-color) !important;
}
.fw-bold {
	font-weight: bold;
}
.fw-100 {
	font-weight: 100;
}
.fw-400 {
	font-weight: 400;
}
.bg-lgt-grey {
	background-color: var(--bg2-color) !important;
}
.bg-lgt-wt {
	background-color: var(--lgt-white);
}
.newsection {
	background-color: var(--bg1-color) !important;
	padding: 1rem;
}
#aboutSection {
	margin-top: 30px;
}

.fs-17px {
	font-size: 17px;
}

/*-----------
Nav bar
---------------------*/

.navbar {
	background: var(--nav-bar);
	color: var(--nav-bar);
	overflow: hidden;
	-webkit-transition: 0.4s;
	-o-transition: 0.4s;
	transition: 0.4s;
	width: 100%;
	padding: 5px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	justify-content: space-between;
	-webkit-box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
	box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.25);
	position: fixed;
	z-index: 400;
	-webkit-transition: 0.6s;
	-o-transition: 0.6s;
}

.navbar a {
	color: var(--nav-clr);
	font-weight: bold;
	font-size: 15px;
	font-weight: 700;
	font-family: 'Josefin Sans', sans-serif;
	transition: 0.6s;
	-o-transition: 0.6s;
	transition: 0.6s;
}

.navbar ul li a:hover {
	-webkit-box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.1);
	box-shadow: 0 5px 15px 2px rgba(0, 0, 0, 0.1);
	display: block;
	background: rgba(255, 255, 255, 0.08);
}

.navbar-expand-lg .navbar-nav .nav-link {
	font-family: 'Quicksand', sans-serif;
	padding-right: 1rem;
	padding-left: 1rem;
	border-radius: 2rem;
	letter-spacing: 1px;
}

#navbar .navbar-brand {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	max-height: 74px;
	overflow: hidden;
	margin-right: 0.6rem;
}

#logo {
	width: 160px !important;
	height: auto !important;
	max-width: 42vw;
	max-height: 72px;
	object-fit: contain;
	display: block;
	-webkit-transition: 0.4s !important;
	-o-transition: 0.4s !important;
	transition: 0.4s !important;
	content: var(--logo-image) !important;
}

@media only screen and (max-width: 768px) {
	#navbar .navbar-brand {
		max-height: 62px;
	}

	#logo {
		width: 130px !important;
		max-height: 58px;
	}
}

.navbar-toggler-icon {
	background-image: var(--navbar-toggle);
	cursor: pointer;
}

a.active {
	color: var(--nav-color) !important;
	font-weight: 800 !important;
	text-shadow: var(--txt-shadow);
}
/* ... */

